Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI429NET.VB

        Public Declare Function BTI429_Sched4BuildExx Lib "BTI429.DLL" Alias "_BTI429_Sched4BuildExx@72" (ByVal style As Int32, ByVal speedflag As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal nummsgs As Int32, ByVal minorframetime As Int32, ByVal majorframetime As Int32, ByVal targetlist As Int32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByRef entriesptr As Int32, ByRef maxentriesptr As Int32, ByVal infoptr As IntPtr, ByVal msgaddrptr As UInt32(), ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedAdvance Lib "BTI429.DLL" Alias "_BTI429_SchedAdvance@4" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedAgain Lib "BTI429.DLL" Alias "_BTI429_SchedAgain@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBranchEx Lib "BTI429.DLL" Alias "_BTI429_SchedBranchEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildAlt Lib "BTI429.DLL" Alias "_BTI429_SchedBuildAlt@24" (ByVal nummsgs As Int32, ByRef msgaddrs As UInt32, ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildBuf Lib "BTI429.DLL" Alias "_BTI429_SchedBuildBuf@32" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal bufcount As Int32, ByRef bufptr As Byte, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildBufEx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildBufEx@48" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal debugval As Int32, ByVal microflag As Int32, ByVal algorithm As Int32, ByVal bufcount As Int32, ByRef bufptr As Byte, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildEx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildEx@28" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildExx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildExx@40" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildExxx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildExxx@40" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal channum As Int32, ByVal debugval As Int32, ByVal microflag As Int32, ByVal algorithm As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuildExxxx Lib "BTI429.DLL" Alias "_BTI429_SchedBuildExxxx@44" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal channum As Int32, ByVal debugval As Int32, ByVal microflag As Int32, ByVal algorithm As Int32, ByVal interceptflag As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedCalc Lib "BTI429.DLL" Alias "_BTI429_SchedCalc@4" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedCallEx Lib "BTI429.DLL" Alias "_BTI429_SchedCallEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedCheck Lib "BTI429.DLL" Alias "_BTI429_SchedCheck@12" (ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal infoptr As IntPtr) As Int32
        Public Declare Sub BTI429_SchedCheckEnd Lib "BTI429.DLL" Alias "_BTI429_SchedCheckEnd@0" ()
        Public Declare Sub BTI429_SchedCheckMiddle Lib "BTI429.DLL" Alias "_BTI429_SchedCheckMiddle@16" (ByVal msgnum As UInt32, ByVal minlen As UInt32, ByVal midlen As UInt32, ByVal maxlen As UInt32)
        Public Declare Sub BTI429_SchedCheckReal Lib "BTI429.DLL" Alias "_BTI429_SchedCheckReal@16" (ByVal msgnum As UInt32, ByVal minlen As UInt32, ByVal midlen As UInt32, ByVal maxlen As UInt32)
        Public Declare Sub BTI429_SchedCheckStart Lib "BTI429.DLL" Alias "_BTI429_SchedCheckStart@0" ()
        Public Declare Function BTI429_SchedConflicts Lib "BTI429.DLL" Alias "_BTI429_SchedConflicts@4" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedDivide Lib "BTI429.DLL" Alias "_BTI429_SchedDivide@4" (ByVal infoptr As IntPtr) As Int32
        Public Declare Function BTI429_SchedFix Lib "BTI429.DLL" Alias "_BTI429_SchedFix@4" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Sub BTI429_SchedFixEnd Lib "BTI429.DLL" Alias "_BTI429_SchedFixEnd@0" ()
        Public Declare Sub BTI429_SchedFixMiddle Lib "BTI429.DLL" Alias "_BTI429_SchedFixMiddle@4" (ByVal conflicts As UInt32)
        Public Declare Sub BTI429_SchedFixStart Lib "BTI429.DLL" Alias "_BTI429_SchedFixStart@0" ()
        Public Declare Sub BTI429_SchedHook Lib "BTI429.DLL" Alias "_BTI429_SchedHook@8" (ByVal index As Int32, ByVal ptr As IntPtr)
        Public Declare Function BTI429_SchedInsert Lib "BTI429.DLL" Alias "_BTI429_SchedInsert@32" (ByVal eventvals As UInt32, ByVal index As UInt32, ByVal msgnum As UInt32, ByRef msgaddr As UInt32, ByVal gapval As UInt32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedInsert2 Lib "BTI429.DLL" Alias "_BTI429_SchedInsert2@32" (ByVal eventvals As UInt32, ByVal index As UInt32, ByVal msgnum As Int32, ByRef msgaddr As UInt32, ByVal gapval As UInt32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedInsertEnd Lib "BTI429.DLL" Alias "_BTI429_SchedInsertEnd@16" (ByVal eventvals As UInt32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedInsertStart Lib "BTI429.DLL" Alias "_BTI429_SchedInsertStart@16" (ByVal eventvals As UInt32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedIntercept Lib "BTI429.DLL" Alias "_BTI429_SchedIntercept@20" (ByVal typeval As Int32, ByVal msgaddr As UInt32, ByVal gapval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_SchedLayout Lib "BTI429.DLL" Alias "_BTI429_SchedLayout@4" (ByVal infoptr As IntPtr)
        Public Declare Function BTI429_SchedLogEx Lib "BTI429.DLL" Alias "_BTI429_SchedLogEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedMaxval Lib "BTI429.DLL" Alias "_BTI429_SchedMaxval@8" (ByVal arrayval As UInt32(), ByVal arrayvalcount As UInt32) As UInt32
        Public Declare Function BTI429_SchedMinval Lib "BTI429.DLL" Alias "_BTI429_SchedMinval@8" (ByVal arrayval As UInt32(), ByVal arrayvalcount As UInt32) As UInt32
        Public Declare Function BTI429_SchedNop Lib "BTI429.DLL" Alias "_BTI429_SchedNop@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedParse Lib "BTI429.DLL" Alias "_BTI429_SchedParse@20" (ByVal basevalmsgnum As Int32, ByRef msgaddr As UInt32, ByVal channum As Int32, ByVal infoptr As IntPtr, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedPreprocess Lib "BTI429.DLL" Alias "_BTI429_SchedPreprocess@36" (ByVal nummsgs As Int32, ByVal speedflag As Int32, ByVal msgaddrptr As UInt32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal debugvalflag As Int32, ByVal targetlist As Int32(), ByRef minorframetime As Int32, ByRef majorframetime As Int32) As Int32
        Public Declare Sub BTI429_SchedPrint Lib "BTI429.DLL" Alias "" (ByVal ParamArray list() As String)
        Public Declare Sub BTI429_SchedPrintEx Lib "BTI429.DLL" Alias "" (ByVal ParamArray list() As Int32)
        Public Declare Function BTI429_SchedPulse0 Lib "BTI429.DLL" Alias "_BTI429_SchedPulse0@12" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedPulse1 Lib "BTI429.DLL" Alias "_BTI429_SchedPulse1@12" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedReset Lib "BTI429.DLL" Alias "_BTI429_SchedReset@4" (ByVal infoptr As IntPtr) As Int32
        Public Declare Function BTI429_SchedRotate Lib "BTI429.DLL" Alias "_BTI429_SchedRotate@4" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedShift Lib "BTI429.DLL" Alias "_BTI429_SchedShift@12" (ByVal msgnum As Int32, ByVal value As Int32, ByVal infoptr As IntPtr) As Int32
        Public Declare Function BTI429_SchedSlide Lib "BTI429.DLL" Alias "_BTI429_SchedSlide@4" (ByVal infoptr As IntPtr) As Int32
        Public Declare Sub BTI429_SchedSlideEnd Lib "BTI429.DLL" Alias "_BTI429_SchedSlideEnd@0" ()
        Public Declare Sub BTI429_SchedSlideMiddle Lib "BTI429.DLL" Alias "_BTI429_SchedSlideMiddle@12" (ByVal index As UInt32, ByVal count As UInt32, ByVal conflicts As UInt32)
        Public Declare Sub BTI429_SchedSlideStart Lib "BTI429.DLL" Alias "_BTI429_SchedSlideStart@4" (ByVal factor As UInt32)
        Public Declare Sub BTI429_SchedSort Lib "BTI429.DLL" Alias "_BTI429_SchedSort@4" (ByVal infoptr As IntPtr)
        Public Declare Function BTI429_SchedToBit Lib "BTI429.DLL" Alias "_BTI429_SchedToBit@8" (ByVal value As UInt32, ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedToMsec Lib "BTI429.DLL" Alias "_BTI429_SchedToMsec@8" (ByVal value As UInt32, ByVal infoptr As IntPtr) As UInt32
        Public Declare Sub BTI429_SchedUnsort Lib "BTI429.DLL" Alias "_BTI429_SchedUnsort@4" (ByVal infoptr As IntPtr)
        Public Declare Function BTI429_SchedUser Lib "BTI429.DLL" Alias "_BTI429_SchedUser@12" (ByVal useraddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedWalk Lib "BTI429.DLL" Alias "_BTI429_SchedWalk@4" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_SchedWriteBuf Lib "BTI429.DLL" Alias "_BTI429_SchedWriteBuf@20" (ByRef bufptr As Byte, ByVal bufcount As Int32, ByVal schaddr As UInt32, ByVal schedcount As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_TestProtocol Lib "BTI429.DLL" Alias "_BTI429_TestProtocol@4" (ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Transpose12 Lib "BTI429.DLL" Alias "_BTI429_Transpose12@4" (ByVal val As UInt16) As UInt16
    End Class
